# SCURank

./: .gitignore  LICENSE  README.md  build_train.py  build_train_data.py  gen_scu.py  pipeline.py  pyproject.toml  scurank.py  secret.sample.py  utils.py
data/cnn_base/: candidates-val.jsonl
data/cnn_llms/: candidates-val.jsonl
data/xsum/: articles-mle-val.txt  articles.txt  articles_val.txt  candidates-val.jsonl
data/xsum/mle/: val.jsonl
experiments/distilled_model_output/: config.py
experiments/distilled_model_output/benchmark/: refs_cnn.jsonl  refs_xsum.jsonl
experiments/distilled_model_output/cnn_base/: bertscore_base_1_result.jsonl  bertscore_base_2_result.jsonl  bertscore_base_3_result.jsonl  bertscore_base_4_result.jsonl  bertscore_base_5_result.jsonl  blanc_base_1_result.jsonl  blanc_base_2_result.jsonl  blanc_base_3_result.jsonl  blanc_base_4_result.jsonl  blanc_base_5_result.jsonl  gptrank_base_1_result.jsonl  gptrank_base_2_result.jsonl  gptrank_base_3_result.jsonl  gptrank_base_4_result.jsonl  (+16 more)
experiments/human-compare/: analysis.py  data_build.py  template.html
experiments/llms-compare/: cnn_compare_gptrank_scurank_by_claude-sonnet-4-20250514.txt  cnn_compare_gptrank_scurank_by_gemini-2.5-pro.txt  cnn_compare_gptrank_scurank_by_grok-4.txt  llm_compare.py  xsum_compare_gptrank_scurank_by_claude-sonnet-4-20250514.txt  xsum_compare_gptrank_scurank_by_gemini-2.5-pro.txt  xsum_compare_gptrank_scurank_by_grok-4.txt
prompts/: extscus.txt  gptrank.txt  llms_compare.txt  summ_cnn.txt  summ_xsum.txt
util/: anthropic.py  gcloud.py  openai.py
(+139 files in other folders)
