[project]
name = "scurank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.58.2",
    "google-genai>=1.26.0",
    "krippendorff>=0.8.1",
    "mistralai[gcp]>=1.9.2",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "openai>=1.97.0",
    "scikit-learn==1.6.1",
    "sentence-transformers==2.7.0",
    "torch==2.3.0",
    "transformers==4.40.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]
